// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigator removes the \`beta\` flag from children, if the parent is a \`beta\` 1`] = `
Array [
  Object {
    "beta": true,
    "childUIDs": Array [
      745124197,
      746047719,
      746971241,
    ],
    "depth": 0,
    "index": 0,
    "parent": <root>,
    "path": "/foo/child0",
    "siblingsCount": 2,
    "title": "Child0",
    "type": "article",
    "uid": 551503843,
  },
  Object {
    "beta": false,
    "childUIDs": Array [],
    "depth": 1,
    "index": 0,
    "parent": 551503843,
    "path": "/foo/child0/grandchild0",
    "siblingsCount": 3,
    "title": "Child0_GrandChild0",
    "type": "tutorial",
    "uid": 745124197,
  },
  Object {
    "childUIDs": Array [
      1489150959,
    ],
    "depth": 1,
    "index": 1,
    "parent": 551503843,
    "path": "/foo/child0/grandchild1",
    "siblingsCount": 3,
    "title": "Child0_GrandChild1",
    "type": "tutorial",
    "uid": 746047719,
  },
  Object {
    "beta": false,
    "childUIDs": Array [],
    "depth": 2,
    "index": 0,
    "parent": 746047719,
    "path": "/foo/child0/grandchild0/greatgrandchild0",
    "siblingsCount": 1,
    "title": "Child0_GrandChild0_GreatGrandChild0",
    "type": "tutorial",
    "uid": 1489150959,
  },
  Object {
    "childUIDs": Array [],
    "depth": 1,
    "index": 2,
    "parent": 551503843,
    "path": "/foo/child0/grandchild2",
    "siblingsCount": 3,
    "title": "Child0_GrandChild2",
    "type": "tutorial",
    "uid": 746971241,
  },
  Object {
    "childUIDs": Array [
      -134251586,
    ],
    "depth": 0,
    "index": 1,
    "parent": <root>,
    "path": "/foo/child1/",
    "siblingsCount": 2,
    "title": "Child1",
    "type": "tutorial",
    "uid": -97593392,
  },
  Object {
    "beta": true,
    "childUIDs": Array [],
    "depth": 1,
    "index": 0,
    "parent": -97593392,
    "path": "/foo/child1/grandchild0",
    "siblingsCount": 1,
    "title": "Child1_GrandChild0",
    "type": "method",
    "uid": -134251586,
  },
]
`;

exports[`Navigator removes the \`beta\` flag from children, if the technology is a \`beta\` 1`] = `
Array [
  Object {
    "beta": false,
    "childUIDs": Array [
      745124197,
      746047719,
      746971241,
    ],
    "depth": 0,
    "index": 0,
    "parent": <root>,
    "path": "/foo/child0",
    "siblingsCount": 2,
    "title": "Child0",
    "type": "article",
    "uid": 551503843,
  },
  Object {
    "beta": false,
    "childUIDs": Array [],
    "depth": 1,
    "index": 0,
    "parent": 551503843,
    "path": "/foo/child0/grandchild0",
    "siblingsCount": 3,
    "title": "Child0_GrandChild0",
    "type": "tutorial",
    "uid": 745124197,
  },
  Object {
    "childUIDs": Array [
      1489150959,
    ],
    "depth": 1,
    "index": 1,
    "parent": 551503843,
    "path": "/foo/child0/grandchild1",
    "siblingsCount": 3,
    "title": "Child0_GrandChild1",
    "type": "tutorial",
    "uid": 746047719,
  },
  Object {
    "childUIDs": Array [],
    "depth": 2,
    "index": 0,
    "parent": 746047719,
    "path": "/foo/child0/grandchild0/greatgrandchild0",
    "siblingsCount": 1,
    "title": "Child0_GrandChild0_GreatGrandChild0",
    "type": "tutorial",
    "uid": 1489150959,
  },
  Object {
    "childUIDs": Array [],
    "depth": 1,
    "index": 2,
    "parent": 551503843,
    "path": "/foo/child0/grandchild2",
    "siblingsCount": 3,
    "title": "Child0_GrandChild2",
    "type": "tutorial",
    "uid": 746971241,
  },
  Object {
    "childUIDs": Array [
      -134251586,
    ],
    "depth": 0,
    "index": 1,
    "parent": <root>,
    "path": "/foo/child1/",
    "siblingsCount": 2,
    "title": "Child1",
    "type": "tutorial",
    "uid": -97593392,
  },
  Object {
    "childUIDs": Array [],
    "depth": 1,
    "index": 0,
    "parent": -97593392,
    "path": "/foo/child1/grandchild0",
    "siblingsCount": 1,
    "title": "Child1_GrandChild0",
    "type": "method",
    "uid": -134251586,
  },
]
`;
